RESOLVED FIXED309426
REGRESSION(308865@main): Static assertion failed due to requirement 'std::is_base_of_v<id<CALayerDelegate>, WKBaseScrollView>': Unnecessary type check
https://bugs.webkit.org/show_bug.cgi?id=309426
Summary REGRESSION(308865@main): Static assertion failed due to requirement 'std::is_...
Jonathan Bedard
Reported 2026-03-07 15:01:27 PST
Debug builds broken by 308865@main.
Attachments
Jonathan Bedard
Comment 1 2026-03-07 15:01:28 PST
Jonathan Bedard
Comment 2 2026-03-07 15:02:17 PST
EWS
Comment 3 2026-03-07 15:45:21 PST
Committed 308871@main (518998928ef7): <https://commits.webkit.org/308871@main> Reviewed commits have been landed. Closing PR #60138 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.