REGRESSION(308865@main): Static assertion failed due to requirement 'std::is_base_of_v<id<CALayerDelegate>, WKBaseScrollView>': Unnecessary type check https://bugs.webkit.org/show_bug.cgi?id=309426 rdar://171994258

Unreviewed build fix.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(WebKit::ScrollingTreeScrollingNodeDelegateIOS::scrollView const):

Canonical link: https://commits.webkit.org/308871@main